# smtp-server-rust

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  config.json
crates/base64/: Cargo.toml
crates/base64/src/: lib.rs
crates/client_connection/: Cargo.toml
crates/client_connection/src/: error.rs  lib.rs
crates/client_session/: Cargo.toml
crates/client_session/src/: error.rs  lib.rs
crates/concurrent_runtime/: Cargo.toml
crates/concurrent_runtime/src/: lib.rs
crates/concurrent_runtime/src/threadpool/: mod.rs
crates/error_adapter/: Cargo.toml
crates/error_adapter/src/: lib.rs
crates/error_handler/: Cargo.toml
crates/error_handler/src/: lib.rs
crates/json_parser/: Cargo.toml
crates/json_parser/src/: error.rs  lib.rs
crates/json_parser/tests/: integrational_tests.rs
crates/logger/: Cargo.toml
crates/logger/src/: lib.rs  logger.rs  logger_macro.rs  msg_fmt.rs  targets.rs  writer.rs
crates/logger/tests/: tests.rs
crates/logger_proc_macro/: Cargo.toml
crates/logger_proc_macro/src/: lib.rs
crates/mail_database/: Cargo.toml  diesel.toml
crates/mail_database/src/: lib.rs  models.rs  schema.rs
crates/mail_database/tests/: test.rs  utils.rs
crates/request_parser/: Cargo.toml
crates/request_parser/src/: commands.rs  lib.rs
crates/smart_stream/: Cargo.toml
crates/smart_stream/src/: error.rs  lib.rs
crates/smtp_server/: Cargo.toml
crates/smtp_server/src/: lib.rs
migrations/2024-09-15-155124_initial/: down.sql  up.sql
scripts/: certgen.sh
server/: Cargo.toml
server/src/: config.rs  main.rs
