[package]
name = "logger"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
crossbeam = "0.8.4"
crossbeam-queue = "0.3.11"

#[cfg(target_os = "linux")]
syslog = "7.0.0"

#[cfg(target_os = "windows")]
windows-sys = { version = "0.52.0", features = ["Win32_System_EventLog", "Win32_Foundation"] }
crossbeam-channel = "0.5.13"